<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">BDFamilyContained</string>
    <string name="RegistroUsuario">Registro Usuario</string>
    <string name="usuarios">Usuarios</string>
    <string name="tareas">Tareas</string>
    <string name="usuarioTareas">Asignación de tareas</string>
 -------------------------------------------------------------------
    <string name="grupos">Grupos</string>
    <string name="aniadir_tarea">Añadir tarea</string>
    <string name="modificar_tarea">Modificar Tarea</string>
    <string name="eliminar_tarea">Eliminar Tarea</string>
    <string name="listar_tareas">Listar Tareas</string>
    <string name="aniadir_usuarios">Añadir Usuario</string>
    <string name="modificar_usuario">Modificar Usuario</string>
    <string name="eliminar_usuario">Eliminar Usuario</string>
    <string name="listar_usuarios">Listar Usuarios</string>


    -----------------------------------------

    <string name="aniadir">Añadir </string>
    <string name="tarea">Tarea</string>
    <string name="modificar">Modificar </string>
    <string name="eliminar">Eliminar </string>
    <string name="listar">Listar </string>
    <string name="usuario_tarea">Usuario Tarea</string>
    <string name="modificar_usuario_tarea">Modificar Usuario Tarea</string>
    <string name="aniadir_usuario_tarea">Añadir Usuario Tarea</string>
    <string name="eliminar_usuario_tarea">Eliminar Usuario Tarea</string>
    <string name="listar_usuario_tarea">Listar Usuario Tarea</string>
    <string name="aniadir_grupo">Añadir Grupo</string>
    <string name="modificar_grupo">Modificar Grupo</string>
    <string name="eliminar_grupo">Eliminar Grupo</string>
    <string name="listar_grupos">Listar Grupo</string>
    <string name="ModificarUsuario">Modificar Usuario</string>
    <string name="ID_no_existe">ID No Existe !!!</string>
    <string name="lista_de_usuarios">Lista de Usuarios</string>
    <string name="crear_tarea">Crear Tarea</string>
   <string name="fecha_realizacion_de_tarea">Fecha Realización de Tarea</string>
   <string name="descripcion">Descripción</string>
   <string name="fecha_creaci_n">Fecha Creación</string>
   <string name="estado_de_tarea">Estado de tarea</string>
   <string name="modificar_descripci_n">Modificar Descripción</string>
   <string name="id_tarea">ID Tarea</string>
    <string name="relacionar_tarea_a_usuario">Relacionar Tarea a Usuario</string>
    <string name="crear_relaci_n">Crear Relación</string>
    <string name="crear_grupo">Crear grupo</string>
    <string name="nombre_grupo">Nombre del grupo</string>
    <string name="descripcion_grupo">Descripción del grupo</string>
    <string name="id_creador">Creador del grupo</string>
    <string name="agregar_grupo">Agregar grupo</string>
    <string name="seleccionar_creador">Seleccionar Creador</string>
    <string name="seleccionar_tarea">Seleccionar Tarea</string>
    <string name="tarea_asignada_al_grupo">Tarea asignada al grupo</string>
    <string name="creador_del_grupo">Creador del Grupo</string>
    <string name="nueva_descripcion_grupo">Nueva Descripción Grupo</string>
    <string name="nuevo_nombre_grupo">Nuevo Nombre Grupo</string>\
    <string name="volver_ataras">Volver atrás</string>\


    -------------------------------------------------------
   <string-array name="estado_tarea_opciones">
       <item></item>
      <item>Pendiente</item>
      <item>En Progreso</item>
      <item>Completada</item>
   </string-array>

    ----------------------------------------------------------------------------

</resources>