<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título del Menú -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_grupo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <!-- Campo de Nombre del Grupo -->
    <EditText
        android:id="@+id/nombreGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_grupo"/>

    <!-- Campo de Descripción del Grupo -->
    <EditText
        android:id="@+id/descripcionGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion_grupo"/>

    <!-- Campo de ID del Creador -->
    <EditText
        android:id="@+id/idCreador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_creador"/>

    <!-- Campo de ID de la Tarea -->
    <EditText
        android:id="@+id/idTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_tarea"/>

    <!-- Botón para Agregar el Grupo -->
    <Button
        android:id="@+id/AgregarGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_grupo"/>
</LinearLayout>
