<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar_tarea"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/idTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_tarea"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/descripcionTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modificar_descripci_n"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/estado_tarea_opciones"
        android:layout_width="match_parent"
        android:text="@string/estado_de_tarea"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btnModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ID_no_existe"
        android:textSize="24sp"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />


</LinearLayout>
