<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título del Menú -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:marginBottom="20dp"/>

    <!-- Botón 1 -->
    <Button
        android:id="@+id/usuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuarios"/>

    <!-- Botón 2 -->
    <Button
        android:id="@+id/tareas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tareas"/>

    <!-- Botón 3 -->
    <Button
        android:id="@+id/usuarioTareas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuarioTareas"/>

    <!-- Botón 4 -->
    <Button
        android:id="@+id/grupos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grupos"/>

</LinearLayout>
