<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título del Menú -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tareas"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <!-- Botón 1 -->
    <Button
        android:id="@+id/aniadir_tarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aniadir_tarea" />

    <!-- Botón 2 -->
    <Button
        android:id="@+id/modificar_tarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar_tarea"/>

    <!-- Botón 3 -->
    <Button
        android:id="@+id/eliminar_tarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_tarea"/>

    <!-- Botón 4 -->
    <Button
        android:id="@+id/listar_tareas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listar_tareas"/>

</LinearLayout>
