<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título del Menú -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_tarea"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:marginBottom="20dp"/>

    <!-- Botón 1 -->
    <Button
        android:id="@+id/aniadir_usuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aniadir_usuario_tarea"/>

    <!-- Botón 2 -->
    <Button
        android:id="@+id/modificar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar_usuario_tarea"/>

    <!-- Botón 3 -->
    <Button
        android:id="@+id/eliminar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_usuario_tarea"/>

    <!-- Botón 4 -->
    <Button
        android:id="@+id/listar_usuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listar_usuario_tarea"/>

</LinearLayout>
