<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar_grupo"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupos"
        android:textSize="17sp"/>

    <!-- Spinner para los grupos -->
    <Spinner
        android:id="@+id/spinnerGrupos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- EditText para el nombre -->
    <EditText
        android:id="@+id/etNuevoNombreGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nuevo_nombre_grupo" />

    <!-- EditText para la descripción -->
    <EditText
        android:id="@+id/etNuevaDescripcionGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nueva_descripcion_grupo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tareas"
        android:textSize="17sp"/>
    <Spinner
        android:id="@+id/spinnerNuevasTareas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Botón para modificar la relación -->
    <Button
        android:id="@+id/btnModificarRelacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="bottom">
        <Button
            android:id="@+id/volverAtras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver_ataras"
            android:textColor="@android:color/white"
            android:background="#3fbb09"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            style="@style/ButtonStyle" />

    </LinearLayout>

</LinearLayout>
