<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_usuario"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/idUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="ID Usuario"
        android:layout_marginBottom="8dp" />


    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="bottom">
        <Button
            android:id="@+id/volverAtras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver_ataras"
            android:textColor="@android:color/white"
            android:background="#3fbb09"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            style="@style/ButtonStyle" />

    </LinearLayout>




</LinearLayout>
